--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "react-toastify": "^9.1.3",
     "styled-components": "^5.3.11",
     "sweetalert2": "^11.4.8",
+    "tailwind-scrollbar": "^3.0.4",
     "themify-icons": "^1.0.0",
     "tw-elements": "^1.0.0-beta2"
   },
